micro-cloud/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: micro-cloud
spec:
  selector:
    app: micro-cloud
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP
