micro-cloud/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-cloud
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: hemidall.dev
      http:
        paths:
          - path: /blog
            pathType: Prefix
            backend:
              service:
                name: micro-cloud
                port:
                  number: 80
